[ST-Engine][Design] download connector jar package from master node